--- a/kompro.html
+++ b/kompro.html
@@ -26,6 +26,10 @@
     h2{font-size:26px}
     h3{font-size:18px}
 
+    p{margin:0 0 14px}
+    ul{margin:0;padding-left:20px}
+    li{margin-bottom:8px}
+
     .section{
       background:#fff;
       margin-bottom:40px;
@@ -44,13 +48,25 @@
 
     .hero img{
       width:120px;
-      margin-bottom:20px;
+      margin-bottom:18px;
     }
 
     .tagline{
       font-size:20px;
-      font-weight:500;
-      opacity:.95;
+      font-weight:600;
+      opacity:.98;
+      margin-bottom:8px;
+    }
+
+    .motto{
+      display:inline-block;
+      margin-top:14px;
+      padding:10px 16px;
+      background:rgba(255,255,255,.14);
+      border:1px solid rgba(255,255,255,.22);
+      border-radius:999px;
+      font-size:14px;
+      font-weight:600;
     }
 
     /* GRID */
@@ -65,13 +81,17 @@
       background:#eef3ff;
       padding:24px;
       border-radius:12px;
+      border:1px solid rgba(15,61,138,.10);
     }
+
+    .card p{margin:0}
 
     /* VISI MISI */
     .visi-misi{
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
       gap:32px;
+      margin-top:10px;
     }
 
     /* SERVICE */
@@ -79,24 +99,21 @@
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
       gap:24px;
-      margin-top:32px;
+      margin-top:24px;
     }
 
     .service-card{
       background:#eef3ff;
       border-radius:14px;
       padding:26px;
-      text-align:center;
+      text-align:left;
+      border:1px solid rgba(15,61,138,.10);
     }
 
-    .service-card img{
-      width:80px;
-      margin-bottom:14px;
-    }
-
+    .service-card h3{margin-top:0}
     .service-card ul{
-      list-style:none;
-      padding:0;
+      list-style:disc;
+      padding-left:18px;
       margin:0;
       font-size:14px;
     }
@@ -108,15 +125,44 @@
       color:#fff;
     }
 
-    .cta a{
+    .cta h2, .cta p{color:#fff}
+    .cta p{opacity:.95}
+
+    .cta-actions{
+      display:flex;
+      flex-wrap:wrap;
+      gap:12px;
+      justify-content:center;
+      margin-top:22px;
+    }
+
+    .btn{
       display:inline-block;
-      margin-top:24px;
-      padding:14px 34px;
-      background:#fff;
-      color:#0f3d8a;
+      padding:14px 18px;
       border-radius:10px;
       text-decoration:none;
-      font-weight:bold;
+      font-weight:700;
+      border:1px solid rgba(255,255,255,.25);
+      background:rgba(255,255,255,.10);
+      color:#fff;
+      min-width:190px;
+    }
+
+    .btn.primary{
+      background:#ffffff;
+      color:#0f3d8a;
+      border:1px solid #ffffff;
+    }
+
+    .btn:hover{
+      filter:brightness(0.98);
+      transform:translateY(-1px);
+    }
+
+    .subcta{
+      margin-top:18px;
+      font-size:13px;
+      opacity:.95;
     }
 
     .footer{
@@ -124,6 +170,12 @@
       font-size:13px;
       color:#6b7280;
       padding:20px 0 40px;
+    }
+
+    @media (max-width: 520px){
+      .section{padding:26px}
+      .btn{min-width:unset;width:100%}
+      .cta-actions{gap:10px}
     }
   </style>
 </head>
@@ -136,145 +188,258 @@
   <h1>PT ASSISTENKU SOLUSI INDONESIA</h1>
   <p class="tagline">Solusi Asisten Profesional dalam Satu Sistem Terpadu</p>
   <p>
-    Platform penyedia dan pengelola asisten profesional yang membantu individu
+    Platform penyedia dan pengelola asisten profesional yang membantu keluarga, individu,
     dan perusahaan bekerja lebih tenang, terkontrol, dan efisien.
   </p>
+  <div class="motto">Motto: Kemudahan Ada Dalam Genggaman</div>
 </section>
 
 <section class="container">
 
-<!-- PAIN POINT -->
-<div class="section">
-  <h2>Tantangan Klien</h2>
-  <ul>
-    <li>Sulit menemukan asisten terpercaya</li>
-    <li>Tidak ada monitoring kinerja</li>
-    <li>Risiko transaksi di luar kesepakatan</li>
-    <li>Kurang transparansi</li>
-    <li>Tidak ada rekam jejak kerja</li>
-  </ul>
-</div>
+  <!-- 1. TENTANG PERUSAHAAN -->
+  <div class="section" id="tentang">
+    <h2>1. Tentang Perusahaan</h2>
+    <p>
+      <strong>Assistenku</strong> adalah perusahaan penyedia layanan asistensi profesional yang dirancang untuk membantu
+      keluarga, individu, dan bisnis dalam menjalankan aktivitas sehari-hari dengan lebih mudah, efisien, dan nyaman.
+      Assistenku hadir sebagai partner terpercaya yang memberikan solusi bantuan tenaga kerja terlatih dan berdedikasi tinggi,
+      dengan standar keamanan yang ketat serta proses seleksi profesional.
+    </p>
 
-<!-- SOLUSI -->
-<div class="section">
-  <h2>Solusi Assistenku</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Sistem Terpusat</h3>
-      <p>Penugasan, komunikasi, dan laporan dalam satu platform.</p>
-    </div>
-    <div class="card">
-      <h3>Mitra Terseleksi</h3>
-      <p>Seleksi, evaluasi, dan standar kerja profesional.</p>
-    </div>
-    <div class="card">
-      <h3>Aman & Transparan</h3>
-      <p>Aktivitas dan transaksi tercatat.</p>
+    <h3>Sejarah Singkat</h3>
+    <p>
+      Assistenku didirikan sebagai respons terhadap kebutuhan masyarakat modern yang kesulitan dalam mendapatkan tenaga kerja
+      yang jujur, terlatih, dan dapat diandalkan. Sejak awal berdiri, perusahaan berfokus pada manajemen layanan asistensi yang
+      profesional, transparan, serta berorientasi pada kepuasan klien.
+    </p>
+  </div>
+
+  <!-- 2. VISI & MISI -->
+  <div class="section" id="visi-misi">
+    <h2>2. Visi & Misi</h2>
+    <div class="visi-misi">
+      <div>
+        <h3>Visi</h3>
+        <p>
+          Menjadi penyedia layanan asistensi paling terpercaya dan mudah diakses di Indonesia,
+          yang menghadirkan kenyamanan serta ketenangan bagi keluarga dan pelaku usaha.
+        </p>
+      </div>
+      <div>
+        <h3>Misi</h3>
+        <ul>
+          <li>Menyediakan tenaga kerja yang terlatih, beretika tinggi, dan profesional.</li>
+          <li>Menghadirkan proses layanan yang modern, cepat, dan transparan.</li>
+          <li>Menjamin pengalaman asistensi yang aman dan memuaskan untuk klien.</li>
+          <li>Membangun hubungan jangka panjang dengan klien melalui kualitas layanan.</li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- VISI MISI -->
-<div class="section">
-  <h2>Visi & Misi</h2>
-  <div class="visi-misi">
-    <div>
-      <h3>Visi</h3>
-      <p>
-        Menjadi layanan asistensi paling terpercaya dan mudah diakses di Indonesia.
-      </p>
-    </div>
-    <div>
-      <h3>Misi</h3>
-      <ul>
-        <li>Menyediakan tenaga terlatih</li>
-        <li>Manajemen modern</li>
-        <li>Meningkatkan efisiensi klien</li>
-        <li>Mengedepankan keamanan</li>
-      </ul>
+  <!-- 3. STRUKTUR ORGANISASI -->
+  <div class="section" id="organisasi">
+    <h2>3. Struktur Organisasi</h2>
+
+    <h3>Founder & Core Team</h3>
+    <p><strong>Abdurrahman Hanif — Founder</strong><br/>
+      Berpengalaman dalam operasional dan manajemen layanan asistensi, fokus pada integritas, standar profesional, dan
+      optimalisasi pengalaman klien.
+    </p>
+
+    <p><strong>Putri Rahmadani — Co-Founder</strong><br/>
+      Berperan dalam pengembangan kurikulum pelatihan tenaga kerja serta pengawasan kualitas layanan secara keseluruhan.
+    </p>
+
+    <p>
+      Assistenku beroperasi di bawah badan hukum <strong>PT Assistenku Solusi Indonesia</strong>,
+      terdaftar secara resmi di Indonesia dengan berbagai dokumen legal terkait perizinan usaha dan akta pendirian.
+    </p>
+  </div>
+
+  <!-- 4. PRODUK & LAYANAN UTAMA -->
+  <div class="section" id="layanan">
+    <h2>4. Produk & Layanan Utama</h2>
+    <p>
+      Assistenku menyediakan berbagai layanan asistensi untuk kebutuhan rumah tangga, personal, hingga operasional bisnis.
+      Seluruh tenaga kerja melalui seleksi ketat, wawancara, dan pelatihan dasar sebelum ditempatkan.
+    </p>
+
+    <div class="service-grid">
+      <div class="service-card">
+        <h3>a. Asisten Rumah Tangga (ART)</h3>
+        <ul>
+          <li>Pembersihan dan pemeliharaan rumah</li>
+          <li>Pencucian & penyetrikaan</li>
+          <li>Memasak dasar</li>
+          <li>Manajemen rumah tangga ringan</li>
+        </ul>
+      </div>
+
+      <div class="service-card">
+        <h3>b. Babysitter / Pengasuh Anak</h3>
+        <ul>
+          <li>Perawatan harian & pengawasan</li>
+          <li>Aktivitas bermain edukatif</li>
+          <li>Bantuan rutinitas anak & keamanan</li>
+        </ul>
+      </div>
+
+      <div class="service-card">
+        <h3>c. Pendamping Lansia / Caregiver</h3>
+        <ul>
+          <li>Pendampingan harian</li>
+          <li>Aktivitas ringan & sosial</li>
+          <li>Dukungan emosional untuk lansia</li>
+        </ul>
+      </div>
+
+      <div class="service-card">
+        <h3>d. Office Boy / Office Girl</h3>
+        <ul>
+          <li>Kebersihan kantor</li>
+          <li>Penataan ruangan</li>
+          <li>Dukungan operasional ringan</li>
+        </ul>
+      </div>
+
+      <div class="service-card">
+        <h3>e. Pengemudi Pribadi</h3>
+        <ul>
+          <li>Layanan driver profesional harian & bulanan</li>
+          <li>Antar-jemput & perjalanan dinas</li>
+          <li>Keamanan berkendara</li>
+        </ul>
+      </div>
+
+      <div class="service-card">
+        <h3>f. Cleaning Service Profesional</h3>
+        <ul>
+          <li>Pembersihan rumah, kantor & area komersial</li>
+          <li>Jadwal kebersihan berkala</li>
+        </ul>
+      </div>
+
+      <div class="service-card">
+        <h3>g. Pembuatan Website & Sistem Digital</h3>
+        <ul>
+          <li>Website company profile</li>
+          <li>Landing page & sistem internal</li>
+          <li>Aplikasi PWA & dashboard manajemen</li>
+        </ul>
+      </div>
+
+      <div class="service-card">
+        <h3>h. AutoCAD & Drafting Teknis</h3>
+        <ul>
+          <li>Gambar kerja 2D/3D untuk arsitektur, sipil, maupun mekanik</li>
+        </ul>
+      </div>
+
+      <div class="service-card">
+        <h3>i. Layanan Tambahan (Segera Hadir)</h3>
+        <ul>
+          <li>Transportasi khusus</li>
+          <li>Jasa kirim barang & Jastip</li>
+          <li>Service & perbaikan rumah/kantor</li>
+          <li>Tenaga kerja umum</li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- LAYANAN -->
-<div class="section">
-  <h2>Cakupan Layanan</h2>
-  <div class="service-grid">
+  <!-- 5. KOMITMEN KUALITAS -->
+  <div class="section" id="kualitas">
+    <h2>5. Komitmen Kualitas</h2>
+    <p>
+      Assistenku menempatkan standar keterampilan, etika, dan kepercayaan sebagai prioritas utama.
+      Proses seleksi mencakup pemeriksaan latar belakang, evaluasi kemampuan, serta pelatihan dasar agar sesuai dengan ekspektasi klien.
+      Jadwal layanan serta detail tugas dapat disesuaikan berdasarkan kebutuhan masing-masing klien.
+    </p>
 
-    <div class="service-card">
-      <h3>Keluarga</h3>
-      <ul>
-        <li>ART</li>
-        <li>Babysitter</li>
-        <li>Pendamping Lansia</li>
-      </ul>
+    <div class="grid">
+      <div class="card">
+        <h3>Seleksi & Verifikasi</h3>
+        <p>Proses seleksi ketat untuk memastikan mitra yang tepat.</p>
+      </div>
+      <div class="card">
+        <h3>Standar & Etika Kerja</h3>
+        <p>Pelatihan dasar dan standar layanan yang konsisten.</p>
+      </div>
+      <div class="card">
+        <h3>Dokumentasi Proses</h3>
+        <p>Aktivitas terdokumentasi untuk transparansi dan perlindungan semua pihak.</p>
+      </div>
     </div>
-
-    <div class="service-card">
-      <h3>Kantor</h3>
-      <ul>
-        <li>Office Boy/Girl</li>
-      </ul>
-    </div>
-
-    <div class="service-card">
-      <h3>Driver</h3>
-      <ul>
-        <li>Pengemudi Pribadi</li>
-      </ul>
-    </div>
-
-    <div class="service-card">
-      <h3>Kebersihan</h3>
-      <ul>
-        <li>Cleaning Service</li>
-      </ul>
-    </div>
-
-    <div class="service-card">
-      <h3>Teknis</h3>
-      <ul>
-        <li>Service & Perbaikan</li>
-      </ul>
-    </div>
-
-    <div class="service-card">
-      <h3>Digital</h3>
-      <ul>
-        <li>Website</li>
-        <li>Sistem Digital</li>
-      </ul>
-    </div>
-
-    <div class="service-card">
-      <h3>Spesialis</h3>
-      <ul>
-        <li>AutoCAD</li>
-      </ul>
-    </div>
-
   </div>
-</div>
 
-<!-- CTA -->
-<div class="section cta">
-  <h2>Cara Kerja Assistenku</h2>
-  <p>
-    Seluruh proses terdokumentasi dengan sistem
-    <strong>Safety, Legal & Audit Logging</strong>.
-  </p>
+  <!-- 6. HUBUNGI KAMI -->
+  <div class="section" id="hubungi">
+    <h2>6. Hubungi Kami</h2>
+    <p>
+      Tim Assistenku siap menjawab pertanyaan, konsultasi layanan, atau membantu proses pendaftaran kerja maupun kerja sama.
+    </p>
 
-  <a href="https://drive.google.com/file/d/1ABEHICwxkmj6TuzvN3cLd2Kk31EN82sF/view?usp=sharing>
-    Download Company Profile PDF
-  </a>
+    <h3>Kontak Resmi</h3>
+    <ul>
+      <li>WhatsApp & Chat Layanan: tersedia melalui website</li>
+      <li>Email Layanan & Karir: tersedia melalui form website</li>
+      <li>Instagram Resmi: dapat diikuti untuk update terbaru</li>
+    </ul>
+  </div>
 
-  <br><br>
-  <a href="/layanan">Lihat Detail Layanan</a>
-</div>
+  <!-- 7. CATATAN LEGAL -->
+  <div class="section" id="legal">
+    <h2>7. Catatan Legal</h2>
+    <p>
+      Assistenku beroperasi di bawah naungan <strong>PT Assistenku Solusi Indonesia</strong> dengan dokumen legal
+      seperti akta pendirian dan pengesahan badan hukum yang sesuai dengan peraturan di Indonesia.
+    </p>
+  </div>
 
-<div class="footer">
-  © PT Assistenku Solusi Indonesia
-</div>
+  <!-- CTA -->
+  <div class="section cta" id="cta">
+    <h2>Permintaan Layanan & Kerja Sama</h2>
+    <p>
+      Hubungi kami untuk konsultasi kebutuhan, penawaran kerja sama, atau informasi layanan.
+      Tim kami akan merespons secepatnya.
+    </p>
+
+    <div class="cta-actions">
+      <!-- WhatsApp: teks otomatis -->
+      <a class="btn primary"
+         href="https://wa.me/628989760020?text=Halo%20Assistenku%2C%20saya%20ingin%20mengajukan%20permintaan%20layanan%20dan%20kerja%20sama.%20Mohon%20info%20prosedur%20dan%20penawarannya."
+         target="_blank" rel="noopener">
+        WhatsApp (Kerja Sama)
+      </a>
+
+      <!-- Email: subject otomatis -->
+      <a class="btn"
+         href="mailto:kontakassistenku@gmail.com?subject=Permintaan%20Layanan%20Kerjasama&body=Halo%20Assistenku%2C%0A%0ASaya%20ingin%20mengajukan%20permintaan%20layanan%20dan%20kerja%20sama.%0A%0AMohon%20informasi%20prosedur%2C%20paket%20layanan%2C%20serta%20penawarannya.%0A%0ATerima%20kasih."
+         target="_blank" rel="noopener">
+        Email (Kerja Sama)
+      </a>
+
+      <!-- Link internal -->
+      <a class="btn" href="/layanan">Buka Halaman Layanan</a>
+      <a class="btn" href="/kontak">Buka Halaman Kontak</a>
+
+      <!-- PDF (link Anda, sudah diperbaiki) -->
+      <a class="btn"
+         href="https://drive.google.com/file/d/1ABEHICwxkmj6TuzvN3cLd2Kk31EN82sF/view?usp=sharing"
+         target="_blank" rel="noopener">
+        Download PDF
+      </a>
+    </div>
+
+    <div class="subcta">
+      Dengan dukungan <strong>Safety, Legal & Audit Logging</strong>, proses penugasan hingga administrasi berjalan lebih aman dan terdokumentasi.
+    </div>
+  </div>
+
+  <div class="footer">
+    © PT Assistenku Solusi Indonesia
+  </div>
 
 </section>
 </body>
